option/app_src/java_tomcat/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ##PREFIX##-app
  labels:
    app: ##PREFIX##-app
spec:
  containers:
  - name: ##PREFIX##-app
    image: ##DOCKER_PREFIX##/app
    ports:
    - containerPort: 8080
      name: app-port
  imagePullSecrets:
  - name: ocirsecret        
---
apiVersion: v1
kind: Service
metadata:
  name: ##PREFIX##-app-service
spec:
  selector:
    app: ##PREFIX##-app
  ports:
  - name: http-service-port
    protocol: TCP
    port: 80
    targetPort: app-port
---
